# easy-temp-dir

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
easy_temp_dir/: __init__.py  core.py
tests/: test_easy_temp_dir.py
